[package]
name = "tron-sdk-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
prost = "0.14.1"
prost-types = "0.14.1"
sha2 = "0.10.9"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
walkdir = "2.5.0"

[dev-dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["full"] }
