[package]
name = "tron-sdk-rs"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
authors = ["15ho <fifteenho@163.com>"]
license = "MIT"
description = """
A comprehensive Rust SDK for the TRON gRPC API,
providing seamless integration with TRON full nodes.
"""
readme = "README.md"
repository = "https://github.com/15ho/tron-sdk-rs"

[dependencies]
bs58 = "0.5.1"
hex = "0.4.3"
num-bigint = "0.4.6"
prost = "0.14.1"
prost-types = "0.14.1"
secp256k1 = {version = "0.31.1", features = ["rand"]}
sha2 = "0.10.9"
sha3 = "0.10.8"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
walkdir = "2.5.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
